# cov_pred_finance

./: .buildinfo  .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  copyright.txt  coverage.sh  create_kernel.sh  cvxcovariance-0.1.3-py3-none-any.whl  cvxcovariance-0.1.4-py3-none-any.whl  cvxcovariance-0.1.5-py3-none-any.whl  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json  startup.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  renovate.json
.github/workflows/: book.yml  ci.yml  pre-commit.yml  release.yml
Experiments/: portfolio_backtests.py
Experiments/data/: factor_data.csv  ff5.csv  ff5_no_rf.csv  lt_reversal.csv  momentum.CSV
Experiments/notebooks/: factor_portfolios.ipynb  industry_portfolios.ipynb  large_universes.ipynb  stock_portfolios.ipynb
_sources/docs/: index.md  reports.md
artifacts/lines/: lines.txt
artifacts/sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
book/: .buildinfo  _config.yml  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.html  api.md  index.html  index.md  marimo.html  marimo.md  nb.html  nb.md  reports.html  reports.md
book/marimo/: demo.py
book/sphinx/: conf.py  license.rst
cvx/covariance/: __init__.py  combination.py  covariance_combination.py  ewma.py  iterated_ewma.py  iterated_ewma_vec.py  log_likelihood.py  main.py  optimal_cov_pred.py  predictors.py  regularization.py  trading_model.py  utils.py  utils_old.py
data/: SP500_top25_adjusted.csv  st_reversal.csv
docs/: api.html  index.html  nb.html  reports.html
docs/notebooks/: demo 2.html  demo.html
experiments/: experiment_utils.py  factor_portfolios.ipynb  industry_portfolios.ipynb  portfolio_backtests.py  regret_and_smoothing_utils.py  stock_portfolios.ipynb
experiments/data/: ETF_data.csv  lt_reversal.csv  momentum.CSV  permco_to_ticker.pkl  sp500_permnos_1990.txt  st_reversal.csv
experiments/extensions/: ADMM.ipynb  generative_mode.ipynb  large_universes.ipynb  nonzero_means.ipynb  playground.ipynb  profile_data.prof  realized_covariance.ipynb  smoothing.ipynb
experiments/notebooks/: factor_portfolios.ipynb  industry_portfolios.ipynb  stock_portfolios.ipynb
experiments/utils/: ccp_regularize.py  experiment_utils.py  factor_model.py  iterated_ewma_vec.py  low_rank_ewma.py  portfolio_backtests.py  return_combination.py  trading_model.py
marimo/: demo.html
notebooks/: 5_stock_portfolios.ipynb  factor_portfolios.ipynb  permutation playground.ipynb  playground.ipynb  stock_portfolios.ipynb
pdoc/: cvx.html  index.html  search.js
pdoc/cvx/: covariance.html
sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree  license.doctree
sphinx/_modules/: index.html
sphinx/_sources/: index.rst.txt
sphinx/autoapi/: index.html
tests/: conftest.py  generate_data.py  generate_nan_data.py  generate_smooth_weight_data.py  playground.ipynb  test_cm.py  test_combination.py  test_combinator.py  test_combine_certain_times.py  test_em_low_rank.py  test_ewma.py  test_ewma_vec.py  test_extensions.py  test_from_ewmas.py  test_from_sigmas.py  test_iewma_nans.py  test_iterated_ewma.py  test_iterated_ewma_vec.py  test_log_likelihood.py  test_main.py  test_pandas.py  test_regularization.py  test_smooth_weights.py  thomas.py
(+191 files in other folders)
